--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.1",
     "autoprefixer": "10.4.15",
+    "encoding": "^0.1.13",
+    "firebase": "^10.3.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
