--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.1",
     "autoprefixer": "10.4.15",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
     "encoding": "^0.1.13",
     "firebase": "^10.3.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3"
   }
